# pixi-build-backends

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  RELEASE.md  _typos.toml  lefthook.yaml  mkdocs.yml  pixi.toml  recipe.yaml  renovate.json  renovate.json5
backends/pixi-build-ros/: .gitignore  pixi.toml  pyproject.toml  robostack.yaml
backends/pixi-build-ros/src/pixi_build_ros/: build_script.py  distro.py  ros_generator.py  utils.py
backends/pixi-build-ros/templates/: build_ament_cmake.sh.in  build_ament_python.sh.in  build_catkin.sh.in
backends/pixi-build-ros/tests/: conftest.py  test_distro.py  test_package_xml.py
crates/pixi-build-cmake/: Cargo.toml  pixi.toml
crates/pixi-build-cmake/src/: build_script.j2  build_script.rs  cmake.rs  config.rs  main.rs  protocol.rs
crates/pixi-build-cmake/src/snapshots/: pixi_build_cmake__build_script__test__build_script@unix-nopython-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@unix-nopython-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@unix-nopython.snap  pixi_build_cmake__build_script__test__build_script@unix-python-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@unix-python-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@unix-python.snap  pixi_build_cmake__build_script__test__build_script@windows-nopython-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-nopython-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-nopython.snap  pixi_build_cmake__build_script__test__build_script@windows-python-no-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-python-with-extra-args.snap  pixi_build_cmake__build_script__test__build_script@windows-python.snap  pixi_build_cmake__cmake__tests__setting_host_and_build_requirements.snap  pixi_build_cmake__tests__cxx_is_in_build_requirements.snap  pixi_build_cmake__tests__cxx_is_not_added_if_gcc_is_already_present.snap  pixi_build_cmake__tests__input_globs_includes_extra_globs.snap
crates/pixi-build-mojo/: Cargo.toml  pixi.toml
crates/pixi-build-mojo/src/: build_script.j2  build_script.rs  config.rs  main.rs
crates/pixi-build-mojo/src/snapshots/: pixi_build_mojo__tests__compiler_is_not_added_if_compiler_is_already_present.snap  pixi_build_mojo__tests__input_globs_includes_extra_globs.snap  pixi_build_mojo__tests__max_is_in_build_requirements.snap  pixi_build_mojo__tests__max_is_not_added_if_max_is_already_present.snap  pixi_build_mojo__tests__mojo_bin_is_set.snap  pixi_build_mojo__tests__mojo_pkg_is_set.snap
crates/pixi-build-python/: Cargo.toml  pixi.toml
crates/pixi-build-python/src/: build_script.j2  build_script.rs  config.rs  main.rs  metadata.rs  protocol.rs  python.rs
crates/pixi-build-python/src/snapshots/: pixi_build_python__metadata__tests__generated_recipe_contains_pyproject_values.snap  pixi_build_python__python__tests__entry_point_not_a_module.snap  pixi_build_python__python__tests__entry_points_are_read.snap  pixi_build_python__python__tests__noarch_none.snap  pixi_build_python__python__tests__noarch_python.snap  pixi_build_python__python__tests__recipe_from_pyproject_toml.snap  pixi_build_python__python__tests__scripts_are_respected.snap  pixi_build_python__python__tests__setting_host_and_build_requirements-2.snap  pixi_build_python__python__tests__setting_host_and_build_requirements.snap  pixi_build_python__python__tests__wrong_entry_points.snap  pixi_build_python__tests__input_globs_includes_extra_globs.snap  pixi_build_python__tests__input_globs_includes_extra_globs_editable.snap  pixi_build_python__tests__pip_is_in_host_requirements.snap  pixi_build_python__tests__python_is_not_added_if_already_present.snap
crates/pixi-build-rattler-build/: Cargo.toml  pixi.toml
crates/pixi-build-rattler-build/src/: config.rs  protocol.rs  rattler_build.rs
crates/pixi-build-rattler-build/src/snapshots/: pixi_build_rattler_build__protocol__tests__conda_outputs.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@boltons__recipe.yaml.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@pin-subpackage-variants__recipe.yaml.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@pin-subpackage__recipe.yaml.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@sub_packages__recipe.yaml.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@variants__recipe.yaml.snap
crates/pixi-build-rust/: Cargo.toml  pixi.toml
crates/pixi-build-rust/src/: build_script.j2  build_script.rs  config.rs  main.rs  metadata.rs  protocol.rs  rust.rs
crates/pixi-build-rust/src/snapshots/: pixi_build_rust__build_script__test__build_script@bash.snap  pixi_build_rust__build_script__test__build_script@cmdexe.snap  pixi_build_rust__build_script__test__openssl@bash.snap  pixi_build_rust__build_script__test__openssl@cmdexe.snap  pixi_build_rust__build_script__test__sccache@bash.snap  pixi_build_rust__build_script__test__sccache@cmdexe.snap  pixi_build_rust__rust__tests__generate_rust_recipe_from_project_model.snap  pixi_build_rust__rust__tests__rust_is_in_build_requirements.snap  pixi_build_rust__tests__conda_outputs_with_variants.snap  pixi_build_rust__tests__env_vars_are_set.snap  (+6 more)
crates/recipe-stage0/: Cargo.toml
crates/recipe-stage0/src/: lib.rs  marked_yaml.rs  matchspec.rs  recipe.rs  requirements.rs
py-pixi-build-backend/: Cargo.toml  pixi.toml  pyproject.toml
py-pixi-build-backend/examples/pixi-build-python/: pyproject.toml
py-pixi-build-backend/pixi_build_backend/types/: generated_recipe.py  intermediate_recipe.py  item.py  project_model.py  requirements.py
py-pixi-build-backend/src/: error.rs  lib.rs
py-pixi-build-backend/src/recipe_stage0/: conditional.rs  conditional_requirements.rs  mod.rs  recipe.rs  requirements.rs
py-pixi-build-backend/src/types/: config.rs  generated_recipe.rs  mod.rs  platform.rs  project_model.rs
py-pixi-build-backend/tests/unit/: test_generated_recipe.py  test_intermediate_recipe.py  test_project_model.py
(+96 files in other folders)
