[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.82"
chrono = "0.4.38"
clap = "4.5.20"
clap-verbosity-flag = "3.0.1"
fs-err = "3.0.0"
indexmap = "2.7.0"
itertools = "0.13.0"
log = "0.4.22"
miette = "7.4.0"
minijinja = "2.7.0"
parking_lot = "0.12.3"
reqwest = "0.12.5"
reqwest-middleware = "0.4.0"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.10.1"
toml_edit = "0.22.22"
tokio = "1.37.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"
pyproject-toml = "0.13.4"
dirs = "6.0.0"
pathdiff = "0.2.3"

jsonrpc-stdio-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"

rattler-build = { git = "https://github.com/prefix-dev/rattler-build", rev = "3ed52d1", default-features = false }

rattler_conda_types = { version = "0.30.0", default-features = false }
rattler_package_streaming = { version = "0.22.22", default-features = false }
rattler_virtual_packages = { version = "2.0.1", default-features = false }

pixi_build_types = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_consts = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_spec = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_build_type_conversions = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
