[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.86"
chrono = "0.4.39"
clap = "4.5.29"
clap-verbosity-flag = "3.0.2"
fs-err = "3.1.0"
indexmap = "2.7.1"
itertools = "0.14.0"
log = "0.4.25"
miette = "7.5.0"
minijinja = "2.7.0"
parking_lot = "0.12.3"
reqwest = "0.12.12"
reqwest-middleware = "0.4.0"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.16.0"
toml_edit = "0.22.24"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"
pyproject-toml = "0.13.4"
dirs = "6.0.0"
pathdiff = "0.2.3"

jsonrpc-stdio-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"

rattler-build = { git = "https://github.com/prefix-dev/rattler-build", rev = "6744398", default-features = false }

rattler_conda_types = { version = "0.30.2", default-features = false }
rattler_package_streaming = { version = "0.22.27", default-features = false }
rattler_virtual_packages = { version = "2.0.2", default-features = false }

pixi_build_types = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_consts = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_spec = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_build_type_conversions = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi-build-backend = { path = "crates/pixi-build-backend" }
