[package]
name = "pixi-build-cmake"
version = "0.2.0"
edition.workspace = true

[dependencies]
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
pixi-build-backend = { workspace = true }
pixi_build_types = { workspace = true }
rattler-build = { workspace = true }
rattler_conda_types = { workspace = true }
recipe-stage0 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
strum = { workspace = true }
