[package]
name = "pixi-build-python"
version = "0.2.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
parking_lot = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_package_streaming = { workspace = true }
rattler_virtual_packages = { workspace = true }
rattler-build = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }
pyproject-toml = { workspace = true }
dirs = { workspace = true }
pathdiff = { workspace = true }

pixi-build-backend = { workspace = true }

pixi_build_types = { workspace = true }
pixi_consts = { workspace = true }
pixi_manifest = { workspace = true }
pixi_spec = { workspace = true }
pixi_build_type_conversions = { workspace = true }

jsonrpc-stdio-server = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-core = { workspace = true }

recipe-stage0 = { workspace = true }

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "redactions", "filters"] }
toml_edit = { version = "0.22.24" }
