[package]
name = "pixi-build-python"
version = "0.3.1"
edition.workspace = true

[dependencies]
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml_edit = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
pyproject-toml = { workspace = true }

pixi-build-backend = { workspace = true }

pixi_build_types = { workspace = true }

recipe-stage0 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
toml_edit = { workspace = true }
serde_json = { workspace = true }
