[package]
name = "pixi-build-rattler-build"
version = "0.2.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
fs-err = { workspace = true }
miette = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_virtual_packages = { workspace = true }
rattler-build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }
indexmap = { workspace = true }
pathdiff = { workspace = true }
itertools = { workspace = true }

pixi-build-backend = { workspace = true }

pixi_build_types = { workspace = true }

[dev-dependencies]
