[package]
name = "pixi-build-rust"
version = "0.2.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true, features = ["json"] }
rattler_conda_types = { workspace = true }
rattler_package_streaming = { workspace = true }
rattler-build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

pixi-build-backend = { workspace = true }

pixi_build_types = { workspace = true }
pixi_manifest = { workspace = true }
pixi_build_type_conversions = { workspace = true }

recipe-stage0 = { workspace = true }

marked-yaml = "0.8.0"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
serde_yaml = "0.9.34"
temp-env = "0.3.6"
