[package]
name = "recipe-stage0"
version = "0.1.0"
edition.workspace = true

[dependencies]
hashlink = "0.10.0"
marked-yaml = "0.8.0"
rattler_conda_types = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
rattler-build = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
either = { workspace = true }
pixi_build_types = { workspace = true }
miette = { workspace = true }


[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "redactions", "filters"] }
serde_json = "1.0"
pixi_build_types = { workspace = true }
