[package]
name = "recipe-stage0"
version = "0.1.0"
edition.workspace = true

[dependencies]
itertools = { workspace = true }
hashlink = { workspace = true }
marked-yaml = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
rattler-build = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }


[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
serde_json = { workspace = true }
pixi_build_types = { workspace = true }
